--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@typescript-eslint/parser": "^5.45.1",
     "eslint": "^8.29.0",
     "git-commit-msg-linter": "^4.4.0",
+    "husky": "^8.0.2",
+    "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
     "typescript": "^4.9.3"
   }
