--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "prettier": "^2.8.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
+  },
+  "dependencies": {
+    "@types/validator": "^13.7.10",
+    "validator": "^13.7.0"
   }
 }
