--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.4",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
@@ -30,6 +31,7 @@
   },
   "dependencies": {
     "@types/validator": "^13.7.10",
+    "bcrypt": "^5.1.0",
     "validator": "^13.7.0"
   }
 }
