chore: add jest configs for mongodb

--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcrypt": "^5.0.0",
     "@types/jest": "^29.2.4",
+    "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.11",
     "@typescript-eslint/eslint-plugin": "^5.45.1",
     "@typescript-eslint/parser": "^5.45.1",
@@ -32,6 +34,7 @@
   "dependencies": {
     "@types/validator": "^13.7.10",
     "bcrypt": "^5.1.0",
+    "mongodb": "^4.12.1",
     "validator": "^13.7.0"
   }
 }
