--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "sucrase-node src/main/server.ts",
     "test": "jest --passWithNoTests --silent",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "yarn test -- --watch -c jest-unit-config.js",
@@ -17,6 +18,7 @@
   "devDependencies": {
     "@shelf/jest-mongodb": "^4.1.4",
     "@types/bcrypt": "^5.0.0",
+    "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.11",
@@ -28,12 +30,14 @@
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
     "prettier": "^2.8.1",
+    "sucrase": "^3.29.0",
     "ts-jest": "^29.0.3",
     "typescript": "^4.9.3"
   },
   "dependencies": {
     "@types/validator": "^13.7.10",
     "bcrypt": "^5.1.0",
+    "express": "^4.18.2",
     "mongodb": "^4.12.1",
     "validator": "^13.7.0"
   }
