--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "sucrase-node src/main/server.ts",
+    "start:dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register src/main/server.ts' -e ts",
     "test": "jest --passWithNoTests --silent",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "yarn test -- --watch -c jest-unit-config.js",
@@ -30,10 +30,12 @@
     "husky": "^8.0.2",
     "jest": "^29.3.1",
     "lint-staged": "^13.1.0",
+    "nodemon": "^2.0.20",
     "prettier": "^2.8.1",
-    "sucrase": "^3.29.0",
     "supertest": "^6.3.3",
     "ts-jest": "^29.0.3",
+    "ts-node": "^10.9.1",
+    "tsconfig-paths": "^4.1.2",
     "typescript": "^4.9.3"
   },
   "dependencies": {
