--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "outDir": "./dist",
     "module": "commonjs",
+    "moduleResolution": "node",
     "target": "es2020",
     "esModuleInterop": true,
     "allowJs": true,
