--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,25 @@
 {
   "compilerOptions": {
     "outDir": "./dist",
+    "rootDir": "./src",
     "module": "commonjs",
     "moduleResolution": "node",
-    "target": "es2020",
+    "lib": ["ES6"],
+    "removeComments": true,
+    "target": "ES2017",
     "esModuleInterop": true,
     "allowJs": true,
-    "baseUrl": "./src",
+    "baseUrl": ".",
     "paths": {
-      "@/*": ["*"]
+      "@/*": ["./src/*"]
     }
-  }
+  },
+  "exclude": [
+    "coverage",
+    "jest-integration-config.js",
+    "jest-mongodb-config.js",
+    "jest-unit-config.js",
+    "jest.config.js",
+    "dist"
+  ]
 }
