--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,12 +14,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "exclude": [
-    "coverage",
-    "jest-integration-config.js",
-    "jest-mongodb-config.js",
-    "jest-unit-config.js",
-    "jest.config.js",
-    "dist"
-  ]
+  "include": ["src/**/*"]
 }
