--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,5 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["src/**/*"],
-  "exclude": ["**/*.spec.ts", "**/*.test.ts"]
+  "include": ["src/**/*"]
 }
