--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.15",
     "@types/jest": "^29.2.4",
+    "@types/jsonwebtoken": "^9.0.0",
     "@types/mongodb": "^4.0.7",
     "@types/node": "^18.11.11",
     "@types/supertest": "^2.0.12",
@@ -46,6 +47,7 @@
     "bcrypt": "^5.1.0",
     "express": "^4.18.2",
     "fast-glob": "^3.2.12",
+    "jsonwebtoken": "^9.0.0",
     "mongodb": "^4.12.1",
     "validator": "^13.7.0"
   }
