--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "build": "rimraf dist && tsc && tsc-alias",
     "start": "node dist/main/server.js",
     "dev": "nodemon --watch 'src/' --exec 'ts-node -r tsconfig-paths/register src/main/server.ts' -e ts",
+    "up": "yarn build && docker compose up -d",
+    "down": "docker compose down",
     "test": "jest --passWithNoTests --silent",
     "test:verbose": "jest --passWithNoTests",
     "test:unit": "yarn test -- --watch -c jest-unit-config.js",
