--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
     "removeComments": true,
     "target": "ES2017",
     "esModuleInterop": true,
-    "allowJs": true,
+    "sourceMap": true,
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
