--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,7 +10,7 @@
   "parserOptions": {
     "ecmaVersion": "latest",
     "sourceType": "module",
-    "project": ["./tsconfig.eslint.json"]
+    "project": ["./tsconfig.json"]
   },
   "plugins": ["@typescript-eslint"],
   "rules": {
